--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,31 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: "/etc/makyo"
+email: makyo.drab-makyo.com
+description: >
+  Sometimes I come up with silly one-page projects, or documents, or other things to share. Those will wind up here for me to link out or for you to paw through!
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://etc.drab-makyo.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: drab_makyo
+github_username:  makyo
+
+# Build settings
+markdown: kramdown
 theme: jekyll-theme-minimal
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - .bundle
